--- a/_config.yml
+++ b/_config.yml
@@ -103,5 +103,5 @@ theme: melody
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: https://github.com/huoshaotuzi/huoshaotuzi.github.io.git
+  repo: git@github.com:huoshaotuzi/huoshaotuzi.github.io.git
   branch: master
